# snack

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  clean  test.py
crates/codegen/: Cargo.toml
crates/error-message/: Cargo.toml
crates/melt/: Cargo.toml  clean
crates/parser/: Cargo.toml
crates/scanner/: Cargo.toml
crates/typechecker/: Cargo.toml
editor/: snack-mode.el  snack.vim
examples/: builtin_test.snack  hello_world  hello_world.snack  load.snack  mem.snack  std.snack  tictactoe  tictactoe.snack
gosnack/: README.md
samples/: add_word.snack  and.snack  const.txt  divide.snack  false.snack  func_return.snack  gtr.snack  hello_world.snack  if-elif-else.snack  ifelse.snack  lexing.snack  memory.snack  mod.snack  multi.snack  no_main_add  no_main_add.snack  no_main_div.snack  no_main_if.snack  no_main_mult.snack  no_main_sub.snack  no_main_syscall_exit.snack  no_main_syscall_write.snack  or.snack  over.snack  print_same_string_twice.snack  return.snack  string.snack  subtraction.snack  test.snack  while.snack  while.txt  word_call_in_loop.snack
snackc/: Cargo.toml  DOC.md  clean  lib.snack  std.snack  test  test.py  test.snack  uselib.snack
snackc/examples/: basic.snack  divide.snack  mod.snack  (+5 more)
src/: arguments.rs  main.rs
test/: basic.snack  const.snack  divide.snack  if-elif-else.snack  print_color.snack  print_same_string_twice.snack  proc.snack  string.snack  while.snack
tests/: and.snack  const.snack  divide.snack  function_args.snack  if-elif-else.snack  memory.snack  print_same_string_twice.snack  return.snack  word.snack  word.txt
(+42 files in other folders)
